# hongwen

./: .gitignore  README.md  hongwen.bat  hongwen.ps1  novel.py  pyproject.toml
.agents/skills/: book_types_config.json
.agents/skills/novel-draft-writer/: SKILL.md
.agents/skills/novel-market-topic/: SKILL.md
.agents/skills/novel-outline-builder/: SKILL.md
.agents/skills/novel-quality-review/: SKILL.md
.agents/skills/novel-rag-voice/: SKILL.md
.agents/skills/novel-story-foundation/: SKILL.md
.agents/skills/tomato-novel-female/: SKILL.md
.claude/: settings.local.json
.claude/skills/novel-draft-writer/: SKILL.md
.claude/skills/novel-export-word/: SKILL.md
.claude/skills/novel-market-topic/: SKILL.md
.claude/skills/novel-outline-builder/: SKILL.md
docs/spark/: 2026-05-25-ai-novel-website-design.md
knowledge_base/: hot_books_kb.md  hot_books_male_kb.md  hot_books_short_kb.md
novel-website/: .env.example  .gitignore  Makefile  dashboard.html  docker-compose.yml  index.html
novel-website/backend/: Dockerfile  alembic.ini  novel.db  requirements.txt
novel-website/css/: animations.css  dashboard.css  landing.css  reset.css  variables.css
novel-website/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
novel-website/js/: dashboard.js  landing.js
scratch/: analyze_kb.py  fanqie_data.json  patch_novel.py  patch_novel_robust.py  rag_chapter_03.md  rag_outline_chapter_03.txt  rag_previous_chapter_03.txt  read_transcript.py  search_kb.py  style_test_excerpt.txt  test_api.py  verify_pipeline.py
(+113 files in other folders)
